GHL & Mindbody workflow create and improve video recorder